# ESP32-Keyboard

./: .gitignore  CMakeLists.txt  platformio.ini  sdkconfig
main/: CMakeLists.txt  battery.cpp  battery.hpp  ble_hid.cpp  ble_hid.hpp  idf_component.yml  keyboard.cpp  keyboard.hpp  led.cpp  led.hpp  main.cpp  metronome.cpp  metronome.hpp  mode.cpp  mode.hpp  ota.cpp  ota.hpp  usb_hid.cpp  usb_hid.hpp  wifi_sta.cpp  wifi_sta.hpp
src/: battery.cpp  battery.h  ble_hid.cpp  ble_hid.h  keyboard.cpp  keyboard.h  led.cpp  led.h  main.cpp  metronome.cpp  metronome.h  mode.cpp  mode.h  ota.cpp  ota.h  usb_hid.cpp  usb_hid.h
